--- a/dTVTerminalApp/app/src/main/res/drawable/my_ch_item_bottom_line.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/my_ch_item_bottom_line.xml
@@ -6,12 +6,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="#80777777"/>
+            <solid android:color="#666666"/>
         </shape>
     </item>
     <item android:bottom="1dp">
         <shape>
-            <solid android:color="#111111" />
+            <solid android:color="#1d1d1d" />
         </shape>
     </item>
  </layer-list>
