--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
@@ -14,6 +14,7 @@
 		android:layout_height="match_parent"
 		android:layout_marginTop="@dimen/list_item_time_start_margin"
 		android:divider="@drawable/list_item_divider"
+		android:listSelector="@drawable/channel_list_item_selector"
 		android:dividerHeight="@dimen/list_divider_height">
 	</ListView>
 
