--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
@@ -30,7 +30,9 @@
         android:layout_height="@dimen/launch_stb_paring_result_layout"
         android:text="@string/str_stb_select_result_text_failed"
         android:textColor="@color/stb_select_white_color"
+        android:lineSpacingMultiplier="1.5"
         android:gravity="center"
+        android:layout_marginTop="@dimen/launch_stb_text_margin_top"
         android:textSize="@dimen/launch_text_size"
         android:layout_below="@+id/stb_icon_relative_layout"
         android:layout_alignParentStart="true" />
