--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_main_layout.xml
@@ -27,8 +27,10 @@
         android:textColor="@color/stb_select_white_color"
         android:layout_marginStart="@dimen/launch_image_bottom_margin"
         android:layout_marginEnd="@dimen/launch_image_bottom_margin"
+        android:lineSpacingMultiplier="1.5"
         android:gravity="center"
         android:textSize="@dimen/launch_text_size"
+        android:layout_marginTop="@dimen/launch_stb_text_margin_top"
         android:layout_below="@+id/stb_icon_relative_layout"
         android:layout_alignParentStart="true" />
 
