--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/fragment_ranking_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/fragment_ranking_content.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-				android:background="@color/recommend_list_background">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/recommend_list_background">
 
-	<TextView
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/channel_list_divider_height"
-		android:layout_marginLeft="@dimen/channel_list_thumbnail_margin_end"
-		android:layout_marginRight="@dimen/channel_list_thumbnail_margin_end"
-		android:background="@color/ranking_list_border"/>
+    <ListView
+        android:id="@+id/lv_ranking_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@drawable/list_item_divider"
+        android:dividerHeight="@dimen/channel_list_divider_height"
+        android:listSelector="@drawable/channel_list_item_selector">
 
-	<ListView
-		android:id="@+id/lv_ranking_list"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:listSelector="@drawable/channel_list_item_selector"
-		android:divider="@drawable/list_item_divider"
-		android:dividerHeight="@dimen/channel_list_divider_height">
-	</ListView>
+    </ListView>
 
 </RelativeLayout>
