DREM-1393 [実装]([DREM-35]レイアウト指示書の適用)おすすめ番組・ビデオ
　ビデオタブよりレーティングの星は排除しました。QAの回答に合わせて、dTV・dTVチャンネル・dアニメの文字表示を変更しました。ビデオタブの表示データ不正と、レコメンド情報の視聴可能期間終了日時のDB未蓄積を修正しました。

Change-Id: I33990425238206db6c8872d04a97cd9e83ff862e

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/fragment_recommend_content.xml
@@ -8,14 +8,15 @@
                 android:layout_height="match_parent"
 				android:background="@color/recommend_list_background">
 
-	<ListView
+	<!-- 例外防止リストビュー -->
+	<com.nttdocomo.android.tvterminalapp.view.RecommendListView
 		android:id="@+id/lv_recommend_list"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_marginTop="@dimen/list_item_time_start_margin"
 		android:divider="@drawable/list_item_divider"
 		android:dividerHeight="@dimen/list_divider_height">
-	</ListView>
+	</com.nttdocomo.android.tvterminalapp.view.RecommendListView>
 
 	<!-- 201804対応 並べ替え/絞り込みボタン
 	<Button
