DREM-280 クリップ一覧(単体試験)
クリップ操作不具合を修正

Change-Id: Ibae449f450da4563e2eb0191c3b60152066f739f

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_recommend_list.xml
@@ -27,7 +27,7 @@
 			android:layout_alignParentRight="true"
 			android:layout_centerVertical="true"
 			android:clickable="true"
-			android:src="@mipmap/icon_circle_opacity_clip"
+			android:background="@mipmap/icon_circle_opacity_clip"
 			android:layout_margin="@dimen/clip_common_margin"
 			android:visibility="gone"/>
 
