--- a/dTVTerminalApp/app/src/main/res/layout/search/layout/item_search_result_televi.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/search/layout/item_search_result_televi.xml
@@ -23,7 +23,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/clip_common_margin"
-            android:src="@mipmap/icon_circle_opacity_clip"
+            android:background="@mipmap/icon_circle_opacity_clip"
             android:clickable="true" />
 
         <LinearLayout
