DREM-1612 [実装]([DREM-32-6] WebView表示画面(ヘルプ等))WebView表示画面の実装
「ドコモテレビターミナルにdアカウントを登録するには」のヘルプ画面を実装
webviewの下部に表示されていたwebviewコントローラを既存の画面から削除

Change-Id: I3b8b386f865d47734c326bd062b7285f8da30268

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_help_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_help_main_layout.xml
@@ -8,9 +8,8 @@
     android:layout_height="match_parent">
 
     <WebView
-        android:id="@+id/d_account_help_webView"
+        android:id="@+id/stb_d_account_regist_help_webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
