--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -117,7 +117,7 @@
     <drawable name="color_white">#ffffff</drawable>
     <drawable name="color_black">#000000</drawable>
     <drawable name="color_gray">#4a4a4a</drawable>
-    <color name ="stb_select_black_color">#000000</color>
+    <color name ="stb_select_black_color">@color/basic_text_color_black</color>
     <color name ="stb_select_white_color">#ffffff</color>
     <color name="stb_select_background_color">#1d1d1d</color>
 
