--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
@@ -32,7 +32,6 @@
         android:textColor="@color/stb_select_white_color"
         android:lineSpacingMultiplier="1.5"
         android:gravity="center"
-        android:layout_marginTop="@dimen/launch_stb_text_margin_top"
         android:textSize="@dimen/launch_text_size"
         android:layout_below="@+id/stb_icon_relative_layout"
         android:layout_alignParentStart="true" />
@@ -46,7 +45,9 @@
         android:layout_marginTop="@dimen/launch_stb_account_error_margin_top"
         android:background="@color/stb_select_white_color"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="@string/str_stb_search_failed_help"
+        android:textSize="@dimen/launch_device_search_error_help_button_text"
         android:textColor="@color/stb_select_black_color" />
     <TextView
         android:id="@+id/stb_search_failed_paring_again"
@@ -58,7 +59,9 @@
         android:layout_marginRight="@dimen/launch_stb_list_start_margin"
         android:background="@color/stb_select_white_color"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="@string/str_stb_search_failed_paring_again"
+        android:textSize="@dimen/launch_device_search_error_help_button_text"
         android:textColor="@color/stb_select_black_color" />
     <CheckBox
         android:id="@+id/stb_select_error_checkBox"
