--- a/dTVTerminalApp/app/src/main/res/drawable/program_end_gray.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/program_end_gray.xml
@@ -11,7 +11,7 @@
     </item>
     <item android:left="@dimen/tv_program_list_gap_between_programs" android:top="@dimen/tv_program_list_gap_between_programs">
     <shape>
-        <solid android:color="@color/program_gray" />
+        <solid android:color="@color/program_end_gray" />
     </shape>
     </item>
  </layer-list>
