DREM-1331[DREM-10-13]コンテンツ詳細(全般/サムネイルにシャドウ付与) && 情報取得中はクルクル表示する
Change-Id: Id77df0a1d86d7844d9341158c2c7f61de89ea34b

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -67,6 +67,13 @@
                     android:contentDescription="@string/contents_info_thumbnail_text"
                     android:scaleType="fitXY" />
 
+                <ImageView
+                    android:id="@+id/dtv_contents_detail_main_layout_thumbnail_shadow"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@mipmap/thumb_material_mask_overlay_gradation"
+                    android:visibility="gone" />
+
                 <LinearLayout
                     android:id="@+id/dtv_contents_detail_main_layout_thumbnail_btn"
                     android:layout_width="wrap_content"
