--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -8,143 +8,148 @@
     android:paddingEnd="@dimen/contents_tab_top_margin"
     android:paddingStart="@dimen/contents_tab_side_margin">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingEnd="@dimen/contents_tab_side_margin"
-        android:paddingStart="@dimen/contents_tab_top_margin">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/dtv_contents_detail_fragment_service_provider"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_tab_side_margin"
-            android:contentDescription="@null" />
-
-        <TextView
-            android:id="@+id/dtv_contents_detail_fragment_contents_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_text_vertical_margin"
-            android:textColor="@color/white_text"
-            android:textSize="@dimen/header_title_text_size"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:paddingEnd="@dimen/contents_tab_side_margin"
+            android:paddingStart="@dimen/contents_tab_top_margin">
 
-        <TextView
-            android:id="@+id/dtv_contents_detail_fragment_contents_sub_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white_text"
-            android:textSize="@dimen/contents_detail_14dp" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_detail_14dp">
-
-            <LinearLayout
-                android:id="@+id/dtv_content_detial_fragment_detail_area"
+            <ImageView
+                android:id="@+id/dtv_contents_detail_fragment_service_provider"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/contents_tab_side_margin"
+                android:contentDescription="@null" />
+
+            <TextView
+                android:id="@+id/dtv_contents_detail_fragment_contents_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/contents_text_vertical_margin"
+                android:textColor="@color/white_text"
+                android:textSize="@dimen/header_title_text_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dtv_contents_detail_fragment_contents_sub_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white_text"
+                android:textSize="@dimen/contents_detail_contents_text_size" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/contents_detail_contents_text_size">
+
+                <LinearLayout
+                    android:id="@+id/dtv_content_detial_fragment_detail_area"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/dtv_contents_detail_fragment_channel_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/contents_detail_schedule_detail_schedule_info"
+                        android:textSize="@dimen/contents_detail_contents_text_size" />
+
+                    <TextView
+                        android:id="@+id/dtv_contents_detail_fragment_channel_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/contents_detail_schedule_detail_schedule_info"
+                        android:textSize="@dimen/contents_detail_contents_text_size" />
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true">
+
+                    <ImageButton
+                        android:id="@+id/dtv_contents_detail_fragment_rec_iv"
+                        android:layout_width="@dimen/contents_detail_icon_size"
+                        android:layout_height="@dimen/contents_detail_icon_size"
+                        android:layout_marginEnd="@dimen/contents_detail_icon_margin"
+                        android:layout_toStartOf="@+id/contents_detail_clip_button"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/recording_reservation_rec_icon_selector"
+                        android:visibility="invisible" />
+
+                    <ImageView
+                        android:id="@+id/contents_detail_clip_button"
+                        android:layout_width="@dimen/contents_detail_icon_size"
+                        android:layout_height="@dimen/contents_detail_icon_size"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="@dimen/contents_detail_clip_margin"
+                        android:clickable="true"
+                        android:gravity="center_vertical"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/icon_circle_opacity_clip" />
+                </RelativeLayout>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/dtv_contents_detail_fragment_label_status_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/contents_detail_clip_margin"
+                android:orientation="horizontal" />
+
+            <TextView
+                android:id="@+id/dtv_contents_detail_fragment_detail_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/contents_text_info_margin"
+                android:ellipsize="end"
+                android:lineSpacingExtra="@dimen/contents_detail_content_line_space"
+                android:maxLines="4"
+                android:textColor="@color/white_text" />
+
+            <TextView
+                android:id="@+id/dtv_contents_detail_fragment_all_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/contents_text_info_margin"
+                android:lineSpacingExtra="@dimen/contents_detail_content_line_space"
+                android:textColor="@color/white_text" />
+
+            <TextView
+                android:id="@+id/dtv_contents_detail_fragment_more_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:gravity="end"
+                android:text="@string/contents_info_more_text"
+                android:textColor="@color/white_text" />
+
+            <LinearLayout
+                android:id="@+id/dtv_contents_detail_fragment_staff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/dtv_contents_detail_fragment_channel_name"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/dtv_contents_detail_fragment_staff_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/contents_detail_schedule_detail_schedule_info"
-                    android:textSize="@dimen/contents_detail_14dp" />
-
-                <TextView
-                    android:id="@+id/dtv_contents_detail_fragment_channel_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/contents_detail_schedule_detail_schedule_info"
-                    android:textSize="@dimen/contents_detail_14dp" />
+                    android:layout_marginTop="@dimen/contents_detail_staff_margin"
+                    android:text="@string/contents_detail_tv_staff"
+                    android:textColor="@color/white_text"
+                    android:textSize="@dimen/contents_detail_staff_text_size"
+                    android:textStyle="bold" />
             </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true">
-
-                <ImageButton
-                    android:id="@+id/dtv_contents_detail_fragment_rec_iv"
-                    android:layout_width="@dimen/contents_detail_icon_size"
-                    android:layout_height="@dimen/contents_detail_icon_size"
-                    android:layout_marginEnd="@dimen/contents_detail_icon_margin"
-                    android:layout_toStartOf="@+id/contents_detail_clip_button"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/recording_reservation_rec_icon_selector"
-                    android:visibility="invisible" />
-
-                <ImageView
-                    android:id="@+id/contents_detail_clip_button"
-                    android:layout_width="@dimen/contents_detail_icon_size"
-                    android:layout_height="@dimen/contents_detail_icon_size"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="@dimen/contents_detail_8dp"
-                    android:clickable="true"
-                    android:gravity="center_vertical"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_circle_opacity_clip" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/dtv_contents_detail_fragment_label_status_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_detail_8dp"
-            android:orientation="horizontal" />
-
-        <TextView
-            android:id="@+id/dtv_contents_detail_fragment_detail_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_text_info_margin"
-            android:ellipsize="end"
-            android:lineSpacingExtra="@dimen/contents_detail_5dp"
-            android:maxLines="4"
-            android:textColor="@color/white_text" />
-
-        <TextView
-            android:id="@+id/dtv_contents_detail_fragment_all_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_text_info_margin"
-            android:lineSpacingExtra="@dimen/contents_detail_5dp"
-            android:textColor="@color/white_text" />
-
-        <TextView
-            android:id="@+id/dtv_contents_detail_fragment_more_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:gravity="end"
-            android:text="@string/contents_info_more_text"
-            android:textColor="@color/white_text" />
-
-        <LinearLayout
-            android:id="@+id/dtv_contents_detail_fragment_staff"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/dtv_contents_detail_fragment_staff_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/contents_detail_staff_margin"
-                android:text="@string/contents_detail_tv_staff"
-                android:textColor="@color/white_text"
-                android:textSize="@dimen/contents_detail_15dp"
-                android:textStyle="bold" />
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/dtv_contents_detail_fragment_recommend"
@@ -157,10 +162,10 @@
             android:id="@+id/dtv_contents_detail_fragment_recommend_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/contents_detail_16dp"
+            android:layout_marginTop="@dimen/contents_detail_staff_margin_top"
             android:text="@string/contents_detail_tv_staff_recommend"
             android:textColor="@color/white_text"
-            android:textSize="@dimen/contents_detail_15dp" />
+            android:textSize="@dimen/contents_detail_staff_text_size" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -171,7 +176,7 @@
                 android:id="@+id/dtv_contents_detail_fragment_recommend_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/contents_detail_10dp"
+                android:layout_marginTop="@dimen/contents_detail_recommend_margin"
                 android:orientation="vertical" />
         </ScrollView>
     </LinearLayout>
