--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -106,13 +106,13 @@
     <dimen name="contents_text_vertical_margin">10dp</dimen>
     <dimen name="contents_text_info_margin">16dp</dimen>
     <dimen name="contents_detail_tabs_height">52dp</dimen>
-    <dimen name="contents_detail_5dp">5dp</dimen>
-    <dimen name="contents_detail_8dp">8dp</dimen>
-    <dimen name="contents_detail_10dp">10dp</dimen>
-    <dimen name="contents_detail_12dp">12dp</dimen>
-    <dimen name="contents_detail_14dp">14dp</dimen>
-    <dimen name="contents_detail_15dp">15dp</dimen>
-    <dimen name="contents_detail_16dp">16dp</dimen>
+    <dimen name="contents_detail_content_line_space">5dp</dimen>
+    <dimen name="contents_detail_clip_margin">8dp</dimen>
+    <dimen name="contents_detail_recommend_margin">10dp</dimen>
+    <dimen name="contents_detail_thumnail_text_size">12dp</dimen>
+    <dimen name="contents_detail_contents_text_size">14dp</dimen>
+    <dimen name="contents_detail_staff_text_size">15dp</dimen>
+    <dimen name="contents_detail_staff_margin_top">16dp</dimen>
     <dimen name="contents_detail_icon_size">36dp</dimen>
     <dimen name="contents_detail_icon_margin">8dp</dimen>
     <dimen name="contents_detail_staff_margin">32dp</dimen>
@@ -150,6 +150,10 @@
     <dimen name="contents_detail_player_media_controller_full_screen_icon_bottom_margin">20dp</dimen>
     <dimen name="contents_detail_watch_dtv_image_width">36dp</dimen>
     <dimen name="contents_detail_watch_dtv_image_height">36dp</dimen>
+    <dimen name="contents_detail_channel_height">59dp</dimen>
+    <dimen name="contents_detail_channel_img_width">76dp</dimen>
+    <dimen name="contents_detail_channel_img_padding">16dp</dimen>
+    <dimen name="contents_detail_channel_txt_size">14dp</dimen>
 
     <!-- WatchingVideoActivity -->
     <dimen name="watch_listen_video_divider_high">1dp</dimen>
