[DREM-35]レイアウト指示書の適用
番組表の背景色の色分け(放送済み:視聴できるか判定実装 不具合修正)

Change-Id: If3caee4a93718f7e32542c6f0c72d9e211ddda5b

--- a/dTVTerminalApp/app/src/main/res/drawable/program_end_gray.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/program_end_gray.xml
@@ -9,7 +9,7 @@
             <solid android:color="@color/tv_program_list_root_view_bg" />
         </shape>
     </item>
-    <item android:left="@dimen/tv_program_list_gap_between_programs" android:top="@dimen/tv_program_list_gap_between_programs">
+    <item android:left="@dimen/tv_program_list_gap_between_programs" android:top="@dimen/tv_program_list_gap_between_programs" android:right="@dimen/tv_program_list_gap_between_programs">
     <shape>
         <solid android:color="@color/program_end_gray" />
     </shape>
