[DREM-51-6] ペアリング設定画面
ペアリング設定画面実装

Change-Id: Ic56d9604ecd007c0dac5732146fbed6868a00d2a

--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/device_name_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/device_name_layout.xml
@@ -20,6 +20,7 @@
         android:paddingStart="@dimen/launch_text_left_padding"
         android:paddingEnd="@dimen/launch_text_right_padding"
         android:maxLines="1"
+        android:textStyle="bold"
         android:ellipsize="end"
         />
 
