--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_list_main_layout.xml
@@ -24,13 +24,12 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerInParent="true" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/record_list_main_layout_viewpagger"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/record_list_main_layout_progress"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true" />
 
